app/base/headlamp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headlamp
  namespace: headlamp
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
  - host: admin.sportdeets.com
    http:
      paths:
      - path: /headlamp
        pathType: Prefix
        backend:
          service:
            name: headlamp
            port:
              number: 80
  - http:
      paths:
      - path: /headlamp
        pathType: Prefix
        backend:
          service:
            name: headlamp
            port:
              number: 80
